# steward-view

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/input/: amazon.csv  jack_checking.csv  jack_credit_card.csv  jill_checking.csv  jill_credit_card.csv
data/output/: labeled_data.csv  matcher.pkl
notebooks/: demo.ipynb
src/analysis/: __init__.py
src/analysis/config/: __init__.py  charts.py  data_cleaning.py  data_labeling.py  openai.py  paths.py
src/analysis/inspect/: __init__.py
src/analysis/inspect/chat/: chat.py
src/analysis/inspect/chat/helpers/: __init__.py  add_expense_file.py  configure_python_tool.py  initiate_conversation.py
src/analysis/inspect/load_matcher/: __init__.py  load_matcher.py
src/analysis/run/: run.py
src/analysis/run/helpers/: __init__.py
src/analysis/run/helpers/analyze/: analyze.py
src/analysis/run/helpers/clean/: __init__.py  clean.py
src/analysis/run/helpers/combine/: __init__.py  combine.py
src/analysis/run/helpers/label/: label.py
src/analysis/run/helpers/load_data/: load_data.py
src/analysis/run/helpers/tag/: __init__.py  tag.py
src/analysis/utilities/: __init__.py
src/analysis/utilities/display_chart/: __init__.py  display_chart.py
src/analysis/utilities/display_chart/helpers/: __init__.py
src/analysis/utilities/merge_groups/: __init__.py  merge_groups.py
tests/: conftest.py  test_matcher.py  test_order.py  test_top_level.py
tests/data/input/matcher/: payments.csv  payments_filtered.csv  products.csv
tests/data/output/actual/: matcher.pkl
tests/data/output/expected/matcher/: matcher.py  (+4 more)
(+109 files in other folders)
