[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis"
version = "0.0.1"
requires-python = ">=3.9"
description = "A package designed by PyFi to show finance professionals the value of Python."
dependencies = ["dotmap>=1.3.30", "ipykernel>=6.29", "ipywidgets>=8.1", "matplotlib>=3.2", "openai>=1", "pandas>=2.1", "pydantic>=2", "tqdm>=4"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["quick: test all run components before label"]